Flushed out logic for home page display.

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -5,5 +5,14 @@
   </head>
   <body>
     <h1>Web Page Summarizer</h1>
+    <div class="content">
+      <div class="home-page-content">
+        <form action="." method="POST">
+          <p><label>URL?<input name="url" type="text"></input></label><button type="submit">Summarize!</button></p>
+        </form>
+      </div>
+      <div class="results">
+      </div>
+    </div>
   </body>
 </html>
