Adding summary page and summarizer logic.

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -12,6 +12,10 @@
         </form>
       </div>
       <div class="results">
+        <h1>Title</h1>
+        <ul>
+          <li>Heading from page</li>
+        </ul>
       </div>
     </div>
   </body>
